# mtg-pd-analysis

./: .flake8  .gitignore  LICENSE  README.md  archetypes.json  get-password.sh  headers.json  main.py  main.tf  pyproject.toml  requirements.txt  response.csv  response.json  sample.py  test.py  variables.tf
aggregate/: __init__.py  agg_arch_card.py  agg_arch_day.py  agg_arch_deck.py  agg_arch_win_rate.py  aggregate_manager.py  aggregator.py  arch_card.sql
database/: database.py  models.py
extract/: __init__.py  extractor.py  paginator.py  preparer.py
handler/: __init__.py
infrastructure/: main.tf
load/: __init__.py  database_writer.py  load.py  parquet_writer.py  writer.py
notifier/: notifier.py
scraper/: main.py
scraper/aggregate/: __init__.py  agg_arch_card.py  agg_arch_day.py  aggregator.py
scraper/database/: database.py  models.py
scraper/extract/: extractor.py  paginator.py  preparer.py
scraper/handler/: error_wrapper.py
scraper/load/: __init__.py  database_writer.py  load.py  writer.py
scraper/transform/: schema.json  transformer.py
tests/: default_values.json  fill_fixture.py
transform/: __init__.py  schema.json  transform_functions.py  transformations.json  transformer.py
