[tool.poetry]
name = "mtg-pd-analysis"
version = "0.1.0"
description = ""
authors = ["Lyndon Fan <lyndon0808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gcsfs = "^2023.1.0"
pandas = "^1.5.3"
pyarrow = "^11.0.0"
ipython = "^8.9.0"
tqdm = "^4.64.1"
black = "^23.1.0"
fastparquet = "^2023.1.0"
python-dotenv = "^0.21.1"
pytest = "^7.2.1"
pytest-lazy-fixture = "^0.6.3"
google-api-python-client = "^2.77.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
